--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,7 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501
+    */urls.py:I001
+    */urls.py:I005
+    */tests.py:I003
 max-complexity = 10
