--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ exclude =
 per-file-ignores =
     */settings.py:E501
     */urls.py:I001
+    */urls.py:I004
     */urls.py:I005
     */tests.py:I003
 max-complexity = 10
