--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,9 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501
-#     */urls.py:I001
-#     */urls.py:I004
-#     */urls.py:I005
-#     */tests.py:I003
+    */urls.py:I001
+    */urls.py:I004
+    */urls.py:I005
+    */tests.py:I003
+    urls.py:I005
 max-complexity = 10
