--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,8 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501
-    */urls.py:I001
-    */urls.py:I004
-    */urls.py:I005
-    */tests.py:I003
-    urls.py:I005
+    */urls.py:001
+    */urls.py:004
+    */urls.py:005
+    */tests.py:003
 max-complexity = 10
