--- a/setup.cfg
+++ b/setup.cfg
@@ -13,4 +13,5 @@ per-file-ignores =
     */urls.py:I001
     */urls.py:I004
     */urls.py:I005
+    */infra_project/urls.py:I005
 max-complexity = 10
