--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: rtmlsh/infra:v08.03
+          tags: rtmlsh/infra:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
